fix: message text should wrap without causing extremely wide messages

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -39,6 +39,7 @@ textarea {
   input,
   textarea {
     user-select: text;
+    word-break: break-all;
   }
 }
 
